ios takes over the input type submit button

--- a/src/static/base.css
+++ b/src/static/base.css
@@ -12,11 +12,14 @@
   text-transform: uppercase;
   display: flex;
   align-items: center;
-  -webkit-appearance: none;
 }
 
 h1 {
   font-size: 1.8rem;
+}
+
+input, textarea, select {
+   -webkit-appearance: none;
 }
 /*
 .text-input {
