--- a/static/reset.css
+++ b/static/reset.css
@@ -75,3 +75,11 @@ html, body {
  /*To smooth any scrolling behavior */
 -webkit-overflow-scrolling: touch;
 }
+
+/* apply a natural box layout model to all elements, but allowing components to change */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
